# metapod

./: CMakeLists.txt  README.md  cmakeutils.cmake  cmp_files.py  qiproject.xml
benchmark/: CMakeLists.txt  benchmark.cc  benchmark.hh  make_model.cc  timer.cc  timer.hh
benchmark/models/sample_15_dof/: robot.hh  sample_15_dof.cc  sample_15_dof.hh
benchmark/models/sample_31_dof/: robot.hh  sample_31_dof.cc  sample_31_dof.hh
benchmark/models/sample_3_dof/: robot.hh  sample_3_dof.cc  sample_3_dof.hh
benchmark/models/sample_63_dof/: robot.hh  sample_63_dof.cc  sample_63_dof.hh
benchmark/models/sample_7_dof/: robot.hh  sample_7_dof.cc  sample_7_dof.hh
binarytreemodel/: CMakeLists.txt
binarytreemodel/src/: binarytreemodel.cc
cmakemodules/: FindROSCONSOLE.cmake  FindURDF.cmake  rosutils.cmake
data/: simple_arm_coupled.config  simple_arm_coupled.urdf  simple_humanoid_coupled.config  simple_humanoid_coupled.urdf
embedfile/: CMakeLists.txt
graph/: CMakeLists.txt
graph/include/metapod/: graph.hh
graph/src/: graph.cc
include/metapod/: config.in.hh
include/metapod/algos/: crba.hh  crba_ng.hh  fwd_kin.hh  jac.hh  jac_point.hh  jac_point_chain.hh  jac_point_relative.hh  rnea.hh
include/metapod/models/simple-arm/: CMakeLists.txt  body.hh  config.hh  joint.hh  robot.hh  simple_arm.cc  simple_arm.hh
include/metapod/models/simple-humanoid/: CMakeLists.txt  body.hh  config.hh  joint.hh  robot.hh  simple_humanoid.cc  simple_humanoid.hh
include/metapod/tools/: backward_traversal.hh  backward_traversal_ng.hh  backward_traversal_prev.hh  backward_traversal_prev_ng.hh  bcalc.hh  buildrobot.hh  bwt.hh  common.hh  depth_first_traversal_ng.hh  dft.hh  initconf.hh  jac_point_robot.hh  jcalc.hh  joint-aboutxaxis.hh  joint-aboutyaxis.hh  joint-aboutzaxis.hh  joint-anyaxis.hh  joint-freeflyer.hh  joint-freeflyerbody.hh  joint.hh  jointmacros.hh  print.hh
include/metapod/tools/spatial/: cm-anyaxis.hh  cm-freeflyer.hh  cm-oneaxis.hh  rm-chgaxis.hh
metapodfromurdf/: CMakeLists.txt
metapodfromurdf/src/: metapodfromurdf.cpp
pregeneratedmodels/simple_arm/: simple_arm.cc  simple_arm.hh
pregeneratedmodels/simple_humanoid/: simple_humanoid.cc  simple_humanoid.hh
robotbuilder/: CMakeLists.txt
robotbuilder/include/metapod/robotbuilder/: robotbuilder.hh
robotbuilder/src/: robotbuilder.cc  robotbuilder_p.cc  robotbuilder_p.hh  robotmodel.cc  robotmodel.hh  txttemplate.cc  txttemplate.hh
robotbuilder/tpl/: init.in.cc  init.in.hh
simple_arm/: CMakeLists.txt
simple_humanoid/: CMakeLists.txt
tests/: CMakeLists.txt  common.hh
tests/data/simple_arm/: backward_traversal.ref  backward_traversal_end.ref  backward_traversal_prev.ref  backward_traversal_prev_end.ref  crba.ref
tests/data/simple_arm_coupled/: backward_traversal_prev.ref  backward_traversal_prev_end.ref  bwt_end.ref  crba.ref
tests/data/simple_humanoid/: backward_traversal.ref  backward_traversal_end.ref  backward_traversal_prev.ref  backward_traversal_prev_end.ref  crba.ref  jac.ref
tests/data/simple_humanoid_coupled/: backward_traversal_end.ref  backward_traversal_prev.ref  bwt_end.ref  crba.ref
tests/spatial/: CMakeLists.txt
tests/tools/: CMakeLists.txt
tests/use_model/: CMakeLists.txt  common.hh  test_backward_traversal.cc  test_backward_traversal_prev.cc  test_crba.cc  test_depth_first_traversal.cc  test_fwd_kin.cc  test_jac.cc  test_rnea.cc
timer/: CMakeLists.txt
timer/src/: timer.cc
